# CrazyEngine

./: LICENSE  README.md  build.bat
EngineCore/: .gitignore  Debug.cs  EngineCore.csproj  EngineCore.sln  GlfwWindow.cs  Program.cs
EngineCore/Interfaces/: IX3DNative.cs
EngineCore/Types/: RustError.cs  RustString.cs  Surface.cs  X3dBinding.cs  X3dMesh.cs
EngineCore/Types/Rust/: Math.cs  RustError.cs  RustString.cs  Surface.cs  X3dBinding.cs  X3dCamera.cs  X3dMaterial.cs  X3dMesh.cs  X3dShader.cs
EngineCore/Vfs/: FileLoader.cs
EngineRenderer/: Cargo.toml
EngineRenderer/engine_renderer/: Cargo.toml
EngineRenderer/engine_renderer/src/: example.rs  ffi.rs  lib.rs
EngineRenderer/engine_renderer/src/ffi/: error_handling.rs  logging.rs  mod.rs
EngineRenderer/engine_renderer/src/photic_binding/: camera_binding.rs  material_binding.rs  mesh_binding.rs  mod.rs  shader_binding.rs  x3d_binding.rs
EngineRenderer/photic/: Cargo.toml
EngineRenderer/photic/src/: camera.rs  lib.rs  surface.rs  x3d.rs
EngineRenderer/photic/src/pipeline/: light.rs  light_conversion.rs  material.rs  mod.rs  render_mesh.rs  shader.rs  texture.rs
EngineRenderer/shaders/: fragment.glsl  vertex.glsl
