[package]
name = "engine_renderer"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gl = "0.14"
glow = "0.4.0"

lazy_static = "1.4.0"
log = { version = "0.4", features = ["std"] }

photic = { path = "../photic" }
cgmath = "0.17.0"
