[package]
name = "photic"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.33"
gl = "0.14"
glow = "0.4.0"
log = "0.4"
luminance = { git = "https://github.com/Lucky4Luuk/luminance-rs" }
luminance-derive = { git = "https://github.com/Lucky4Luuk/luminance-rs" }
image = "0.23.2"
cgmath = "0.17.0"
regex = "1.3.5"
